--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,33 @@
 <resources>
     <string name="app_name">CinemaHub_LookNFeel</string>
+
+    <!-- Menu Strings: -->
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="profile">Profile</string>
+    <string name="ticket">ticket</string>
+    <string name="settings">Settings</string>
+
+
+    <string name="genre_caps">GENRE</string>
+    <string name="genre_caption">Genre:</string>
+    <string name="release_date_caption">Release Date:</string>
+    <string name="rating_caption">Rating:</string>
+    <string name="movie_title_caps">MOVIE TITLE</string>
+    <string name="release_date_caps">RELEASE DATE</string>
+    <string name="score_caption">Score:</string>
+    <string name="rating_caps">RATING</string>
+
+    <!-- Movie Details: -->
+    <string name="trailer_caption">Trailer:</string>
+    <string name="cast_caption">Cast:</string>
+    <string name="cast_caps">CAST</string>
+    <string name="director_caption">Director:</string>
+    <string name="director_caps">DIRECTOR</string>
+    <string name="synopsis_caps">SYNOPSIS</string>
+    <string name="synopsis_caption">Synopsis:</string>
+    <string name="runtime_caps">RUNTIME</string>
+    <string name="date_caps">DATE</string>
+
+    <string name="select_showtime_caption">Select a showtime:</string>
 </resources>
