--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="profile">Profile</string>
-    <string name="ticket">ticket</string>
+    <string name="ticket">Ticket</string>
     <string name="settings">Settings</string>
 
 
