--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="r_reclining_seats">R - Reclining Seats</string>
     <string name="h_handicap">H - Handicap</string>
     <string name="please_select_the_desired_seat">Please select the desired seat</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
