--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CinemaHub_LookNFeel</string>
+    <string name="app_name">Popcorn Bookings</string>
 
     <!-- Menu Strings: -->
     <string name="home">Home</string>
